--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git 'https://github.com/mkubecki/selenium-test.git'
+                git 'https://github.com/mkubecki/selenium-test.git/main'
             }
         }
         stage('Install Dependencies') {
