--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Run Tests') {
             steps {
-                pytest --html=report.html --self-contained-html
+                /Library/Frameworks/Python.framework/Versions/3.12/bin/pytest --html=report.html --self-contained-html
             }
         }
         stage('Publish Report') {
