--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('Install Dependencies') {
             steps {
-                pip install -r requirements.txt
+                sh '/usr/local/bin/pip install -r requirements.txt'
             }
         }
         stage('Run Tests') {
