--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('Install Dependencies') {
             steps {
-                sh 'pip3pyt  install -r requirements.txt'
+                sh 'pip  install -r requirements.txt'
             }
         }
         stage('Run Tests') {
