--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,21 +13,18 @@ pipeline {
         }
         stage('Run Tests') {
             steps {
-                sh 'which pytest'
-                sh 'echo "test"'
-                sh 'pytest --html=report.html --self-contained-html'
+                sh 'pytest --html=report.html'
             }
         }
         stage('Publish Report') {
             steps {
-                publishHTML(target: [
-                    allowMissing: false,
-                    alwaysLinkToLastBuild: false,
-                    keepAll: true,
-                    reportDir: '.',
-                    reportFiles: 'report.html',
-                    reportName: 'Test Report'
-                ])
+                publishHTML([allowMissing: false,
+                             alwaysLinkToLastBuild: true,
+                             keepAll: true,
+                             reportDir: '.',
+                             reportFiles: 'report.html',
+                             reportName: 'HTML Report',
+                             reportTitles: 'Test Report'])
             }
         }
     }
