--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,5 +17,17 @@ pipeline {
             }
         }
     }
+
+    post {
+        always {
+            publishHTML([allowMissing: false,
+                         alwaysLinkToLastBuild: true,
+                         keepAll: true,
+                         reportDir: '.',
+                         reportFiles: 'report.html',
+                         reportName: 'HTML Report',
+                         reportTitles: 'Test Report'])
+        }
+    }
 }
 
